# I_am_OK

./: .buildstatus  .dockerignore  .firebaserc  .gitignore  ANDROID_SDK_EXPLANATION.md  ANIMATIONS_GUIDE.md  ARCH_SPEC_FINAL.md  ASSETS_ORGANIZATION_GUIDE.md  AUDIT_REPORT.md  AUDIT_SUMMARY_UK.md  BIDIRECTIONAL_ADD_TEST_INSTRUCTIONS.md  BUILD_ALTERNATIVES.md  BUILD_ANDROID_STUDIO.md  BUILD_FIXES_APPLIED.md  BUILD_STATUS.md  BUILD_SUMMARY.md  BUILD_VIA_ANDROID_STUDIO_FINAL.md  CHANGELOG.md  CODE_REVIEW_REFACTORING.md  COMPLIANCE_AUDIT_REPORT.md  CONCEPT_YA_OK.md  CONTRIBUTING.md  DEFECT_REMEDIATION_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOY_FIRESTORE.md  DESIGN_TO_FLUTTER_GUIDE.md  DOCKER_BUILD.md  DTLS_IMPLEMENTATION_REPORT.md  Dockerfile  EXPORT_ALL_ASSETS_GUIDE.md  FIGMA_ANIMATIONS_IMPORT.md  FIGMA_EXPORT_GUIDE.md  FINAL_RELEASE_REPORT.md  FIREBASE_OPTIONS_TEMPLATE.md  FIREBASE_SETUP_GUIDE.md  FIRESTORE_RULES_GUIDE.md  FIXES_PROGRESS.md  FIXES_REPORT_8_ISSUES.md  FIXES_SUMMARY_UA.md  FIX_ANDROID_STUDIO_SYNC.md  (+69 more)
.azure/: ARCHITECTURE.md  pipeline-setup.md  setup-azure-auth-for-pipeline.ps1
android/: INTEGRATION_TEST_REPORT.md  README.md  RELEASE_BUILD.md  TEST_REPORT.md  gradle.properties  integration_test.ps1  keystore.properties.example  run_android.ps1  settings.gradle  simple_test.ps1  test_app.ps1
docs/: ACCEPTANCE_CRITERIA.md  ACK_IMPLEMENTATION.md  DEFINITION_OF_DONE_AND_SCENARIOS.md  GLOSSARY.md  ISO_COMPLIANCE_SUMMARY.md  NON_FUNCTIONAL_REQUIREMENTS.md  QA_MATRIX.md  RELAY_SECURITY.md  RELAY_SERVER_GUIDE.md  RELEASE_NOTES_v0.1.0.md  REQUIREMENTS_TRACEABILITY_MATRIX.md  SRS.md  STANDARDS_GAP_ANALYSIS.md  STORE_LISTINGS.md  animated-prototype.html  index.html  logo-export-tool.html  logo-v1-all-sizes.html  logo-v1-specification.md  logo-v4-usage-examples.html  support.html  terms.html
functions/: index.js  package.json
lib/: firebase_options.dart  main.dart
logo/: QUICK_START.md  README.md  RUN_SCRIPT.md  icon-action-check-128.png.crdownload  icon-navigation-back-256.png.crdownload  icon-navigation-close-512.png.crdownload  icon-navigation-family-128.png.crdownload  icon-navigation-family-256.png.crdownload  icon-navigation-family-512.png.crdownload  icon-navigation-notifications-256.png.crdownload  icon-navigation-notifications-512.png.crdownload  icon-navigation-notifications-64.png.crdownload  icon-status-busy-128.png.crdownload  icon-status-busy-256.png.crdownload  icon-status-hug-128.png.crdownload  icon-status-later-512.png.crdownload  icon-status-later-64.png.crdownload  icon-status-ok-128.png.crdownload  icon-status-ok-512.png.crdownload  icon-status-ok-64.png.crdownload  logo-appIcon-120.png.crdownload  logo-appIcon-192.png.crdownload  logo-appIcon-512.png.crdownload  logo-appIcon-58.png.crdownload  logo-favicon-16.png.crdownload  organize-files-simple.ps1  ui-big-button.png.crdownload  ui-contact-card.png.crdownload  ui-search-input.png.crdownload  ui-secondary-button.png.crdownload  (+3 more)
relay/: Cargo.toml  Dockerfile  README_TLS.md  fly.toml
relay/src/: admin_panel.html  main.rs
ya_ok_core/: Cargo.toml  Cargo_bench.toml.txt  README.md  RISK_REGISTER.md  SECURE_KEY_STORAGE.md  packet_flow.md
ya_ok_core/benches/: crypto_benchmarks.rs  storage_benchmarks.rs
ya_ok_core/src/: lib.rs
ya_ok_core/src/api/: android_jni.rs  mod.rs
ya_ok_core/src/core/: crypto.rs  identity.rs  identity_store.rs  message.rs  mod.rs  packet.rs
ya_ok_core/src/policy/: mod.rs
ya_ok_core/src/routing/: mod.rs  queue.rs
ya_ok_core/src/security/: key_manager.rs  mod.rs
ya_ok_core/src/storage/: mod.rs  tests.rs
ya_ok_core/src/sync/: mod.rs
ya_ok_core/src/transport/: ble.rs  ble_tests.rs  chunking.rs  dtls.rs  dtls_tests.rs  mod.rs  satellite.rs  udp.rs  udp_tests.rs  wifi_direct.rs
(+189 files in other folders)
