[package]
name = "yaok-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1.5", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
urlencoding = "2.1"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
