[package]
name = "ya_ok_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Crypto
ed25519-dalek = { version = "2.0", features = ["serde"] }
x25519-dalek = "2.0"
aes-gcm = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"  # CBOR serialization

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Storage
rusqlite = { version = "0.29", features = ["bundled"] }
sled = "0.34"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# FFI for mobile
jni = "0.21"

[features]
default = []
ffi = ["jni"]